b=129533 fixes solaris bustage resulting from checkin for bug 124042